--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
